[gd_scene load_steps=5 format=3 uid="uid://dkhpxltqr6td7"]

[ext_resource type="Texture2D" uid="uid://ctp3sefiagpa0" path="res://levels/tileset.png" id="1_0i60l"]
[ext_resource type="Script" path="res://scripts/button_platform.gd" id="1_ua1a5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ir5jy"]
size = Vector2(22, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1rhwv"]
size = Vector2(28, 4)

[node name="ButtonPlatform" type="Node2D"]
script = ExtResource("1_ua1a5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_ir5jy")

[node name="Sprites" type="Node2D" parent="Area2D"]

[node name="TopHeavy" type="Sprite2D" parent="Area2D/Sprites"]
texture_filter = 1
texture = ExtResource("1_0i60l")
region_enabled = true
region_rect = Rect2(96, 160, 32, 32)

[node name="TopAlt" type="Sprite2D" parent="Area2D/Sprites"]
texture_filter = 1
texture = ExtResource("1_0i60l")
region_enabled = true
region_rect = Rect2(128, 288, 32, 32)

[node name="Top" type="Sprite2D" parent="Area2D/Sprites"]
texture_filter = 1
texture = ExtResource("1_0i60l")
region_enabled = true
region_rect = Rect2(192, 288, 32, 32)

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 13)
shape = SubResource("RectangleShape2D_1rhwv")

[node name="Sprites" type="Node2D" parent="StaticBody2D"]

[node name="BottomHeavy" type="Sprite2D" parent="StaticBody2D/Sprites"]
texture_filter = 1
texture = ExtResource("1_0i60l")
region_enabled = true
region_rect = Rect2(224, 288, 32, 32)

[node name="BottomAlt" type="Sprite2D" parent="StaticBody2D/Sprites"]
texture_filter = 1
texture = ExtResource("1_0i60l")
region_enabled = true
region_rect = Rect2(160, 288, 32, 32)

[node name="Bottom" type="Sprite2D" parent="StaticBody2D/Sprites"]
texture_filter = 1
texture = ExtResource("1_0i60l")
region_enabled = true
region_rect = Rect2(224, 288, 32, 32)

[node name="ButtonHardener" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ButtonHardener"]
position = Vector2(0, 15)
polygon = PackedVector2Array(-8, -8, 8, -8, 11, -5, -11, -5)
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
